# image-as-imu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_test1.py  test_backbone_speed.py  test_backbone_tiny.py
eval/: eval_colmap.py  eval_droid.py  eval_iaai.py  eval_mast3r.py  eval_utils.py
eval/configs/: colmap_cfg.yaml  droid_cfg.yaml  iaai_cfg.yaml  mast3r_cfg.yaml
iaai/: dataset.py  funcs.py  model.py  modules.py
iaai/utils/: io.py  metrics.py  viz.py
iaai_test-sequence/test-billiards/: calib_params_320x224.csv  calib_params_320x224.txt  camera_matrix.csv  camera_matrix_320x224.csv  imu.csv  odometry.csv  opencv_poses.csv  velocities.csv
iaai_test-sequence/test-commonroom/: arkit_world_poses.csv  calib_params_320x224.csv  calib_params_320x224.txt  camera_matrix.csv  camera_matrix_320x224.csv  imu.csv  odometry.csv  opencv_poses.csv  velocities.csv
iaai_test-sequence/test-dining/: calib_params_320x224.txt  camera_matrix.csv  camera_matrix_320x224.csv  imu.csv  odometry.csv  opencv_poses.csv  velocities.csv
iaai_test-sequence/test-office/: calib_params_320x224.txt  camera_matrix.csv  camera_matrix_320x224.csv  (+4 more)
strayscanner/: process_strayscanner_seq.py  process_strayscanner_utils.py  run_custom_strayscanner_seq.py  run_custom_strayscanner_seq_fps1.py  run_custom_strayscanner_seq_fps2.py  run_custom_strayscanner_seq_fps3.py  run_custom_strayscanner_seq_test1.py
synth_data_gen/: generate_data_from_scannetpp.py  generate_imu_from_pose.py  synth_data_gen_cfg.yaml  synth_data_utils.py
train/: generate_pseudo_gt.py  train.py
(+24 files in other folders)
